--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,28 +3,29 @@
       xmlns:th="http://www.thymeleaf.org">
 
 
-    <th:block th:insert="layout-template"></th:block>
-    <div class="container">
-        <div class="row">
-            <div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <form class="center" th:action="@{/login}" method="post">
-                        <div class="form-group">
-                            <label for="username">Podaj e-mail</label>
-                            <input id="username" class="form-control" type="text" placeholder ="e-mail" name="username"/>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Podaj hasło</label>
-                            <input id="password" class="form-control" type="password" placeholder ="hasło" name="password"/>
-                        </div>
-                        <div class="form-check">
-                            <input type="submit" class="btn btn-primary" value="Zaloguj"/>
-                        </div>
-                    </form>
+<th:block th:insert="layout-template"></th:block>
+<div class = "margin">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <form class="center" th:action="@{/login}" method="post">
+                            <div class="form-group">
+                                <label for="username">Podaj e-mail</label>
+                                <input id="username" class="form-control" type="text" placeholder ="e-mail" name="username"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Podaj hasło</label>
+                                <input id="password" class="form-control" type="password" placeholder ="hasło" name="password"/>
+                            </div>
+                            <div class="form-check">
+                                <input type="submit" class="btn btn-primary" value="Zaloguj"/>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 </html>
